[tool.poetry]
name = "stsc"
version = "0.1.0"
description = "Self-Tuning Spectral Clustering"
authors = ["Yongxin Yang <iamwool@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1.3"
autograd = "^1.2"
numpy = "^1.16"
pymanopt = "^0.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
